# MLX8_W6

./: gpu-script.sh  pyproject.toml
src/: dataset.py  model.py  sft_train.py  sweep_config.py  train.py  utils.py
src/wandb/: latest-run
src/wandb/run-20250715_162107-mvl3xgzt/: run-mvl3xgzt.wandb
src/wandb/run-20250715_162536-3v3ggq6q/: run-3v3ggq6q.wandb
src/wandb/run-20250715_162616-6g3hvi45/: run-6g3hvi45.wandb
src/wandb/run-20250715_162655-4wt7evmd/: run-4wt7evmd.wandb
src/wandb/run-20250715_162840-gmksp22b/: run-gmksp22b.wandb
src/wandb/run-20250715_163009-l2hb8ysb/: run-l2hb8ysb.wandb
src/wandb/run-20250715_165243-u1ysyia7/: run-u1ysyia7.wandb
src/wandb/run-20250715_165802-yzlq9htw/: run-yzlq9htw.wandb
src/wandb/run-20250715_170014-449id8po/: run-449id8po.wandb
src/wandb/run-20250715_170434-67qod65v/: run-67qod65v.wandb
src/wandb/run-20250715_171041-5xoefkvj/: run-5xoefkvj.wandb
src/wandb/run-20250715_171118-wxpp6rw0/: run-wxpp6rw0.wandb
src/wandb/run-20250715_171615-4yby7rlo/: run-4yby7rlo.wandb
src/wandb/run-20250715_172024-xblkcqnr/: run-xblkcqnr.wandb
src/wandb/run-20250716_102434-j3801dp9/: run-j3801dp9.wandb
src/wandb/run-20250716_103127-cu3r7kyo/: run-cu3r7kyo.wandb
src/wandb/run-20250716_103644-p1i7pdln/: run-p1i7pdln.wandb
src/wandb/run-20250716_103908-a50mp7bx/: run-a50mp7bx.wandb
src/wandb/run-20250716_105417-f0gx099f/: run-f0gx099f.wandb
src/wandb/run-20250716_105725-usd99b4d/: run-usd99b4d.wandb
src/wandb/run-20250717_152829-ihlbk27l/: run-ihlbk27l.wandb
(+23 files in other folders)
